--- a/training/intro.qmd
+++ b/training/intro.qmd
@@ -99,7 +99,7 @@ modules.
 
 ### Methods vs. Results
 
-Scientists have embraced the idea of module code by creating and using
+Scientists have embraced the idea of modular code by creating and using
 functions bundled into packages, e.g., R packages. This is analogous to
 the **Methods** section: i.e., to describes how you will do something.
 This has massively accelerated Ecology and other data sciences. However,
