--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -218,3 +218,7 @@ Some of our team regularly add:
 
 3.  If using SpaDES, use cache at the event level, if the event is
     non-stochastic
+
+
+
+<!-- NEVER CACHE SIMINIT()-->
