--- a/training/installRandSpatialPkgs.qmd
+++ b/training/installRandSpatialPkgs.qmd
@@ -9,64 +9,86 @@ editor_options:
 
 # Installing R and Spatial Packages
 
-To use SpaDES, a user must have R installed, plus some dependencies. Furthermore, it will be easier if the user also has Rtools installed. Finally, our group works with Rstudio so many directions will rely on Rstudio tools. Having Rstudio installed will make it easier for training and learning.
+To use SpaDES, a user must have R installed, plus some dependencies.
+Furthermore, it will be easier if the user also has
+[Rtools](https://cran.RStudio.com/bin/windows/Rtools/) installed.
+Finally, our group works with
+[RStudio](https://posit.co/products/open-source/RStudio/) so many
+directions will rely on RStudio tools. [Installing
+RStudio](https://posit.co/downloads/) will make it easier for training
+and learning.
 
-##  Install R
+## Install R
 
 ### Windows
 
-1. Download and run the [R installer](https://cran.r-project.org/bin/windows/base) (as administrator!).
-2. Download and install the latest [**Rtools**](http://cran.r-project.org/bin/windows/Rtools/) (as administrator!). Be sure to check the "add rtools to PATH" option during installation if necessary (Rtools v4.0).
+1.  Download and run the [R
+    installer](https://cran.r-project.org/bin/windows/base) (as
+    administrator!).
+
+2.  Download and install the
+    [**Rtools**](http://cran.r-project.org/bin/windows/Rtools/) version
+    that matches the installed R version. Be sure to check the "add
+    Rtools to PATH" option during installation if necessary (Rtools
+    v4.0).
 
 ### macOS
 
-1. Download and run the R installer from <https://cran.r-project.org/bin/macosx>.
-2. Install Xcode commandline tools from the terminal:
+1.  Download and run the R installer from
+    <https://cran.r-project.org/bin/macosx>.
 
-```bash
+2.  Install Xcode commandline tools from the terminal:
+
+``` bash
 xcode-select --install
 ```
 
-3. Install homebrew from the terminal (instructions at <https://brew.sh/>)
-4. Install GDAL and other spatial packages (instructions at <https://www.alexchubaty.com/post/2020-01-08-using-latest-gdal-macos-redux/>)
-5. Install OpenMP support for data.table:
+3.  Install homebrew from the terminal (instructions at
+    <https://brew.sh/>)
 
-```bash
+4.  Install GDAL and other spatial packages (instructions at
+    <https://www.alexchubaty.com/post/2020-01-08-using-latest-gdal-macos-redux/>)
+
+5.  Install OpenMP support for data.table:
+
+``` bash
 brew update && brew install llvm
 ```
-6. Install GLPK (needed for full `igraph` functionality; used with `SpaDES.core::moduleGraph`):
 
-```bash
+6.  Install GLPK (needed for full `igraph` functionality; used with
+    `SpaDES.core::moduleGraph`):
+
+``` bash
 brew install glpk
 ```
 
-Then, reinstall `igraph` from source so it is compiled with GLPK:
+Then, in R, install `igraph` from source so it is compiled with GLPK:
 
-```r
+``` r
 install.packages("igraph", type = "source")
 ```
 
 ### Linux
 
-Install via `apt` or `yum` depending on your distribution.
-Instructions for Ubuntu 18.04 LTS are shown below.
+Install via `apt` or `yum` depending on your distribution. Instructions
+for Ubuntu 18.04 LTS are shown below.
 
-1. Install R and its development libraries:
+1.  Install R and its development libraries:
 
-```r
+``` r
 sudo apt install r-base r-base-dev
 ```
 
-2. Install java and configure R to use it:
+2.  Install java and configure R to use it:
 
-```r
+``` r
 sudo apt build-dep -y r-cran-rjava
 sudo R CMD javareconf
 ```
 
-3. Install dependencies for spatial and other packages:
+3.  Install dependencies for spatial and other packages:
 
-```r
+``` r
 sudo apt build-dep -y r-cran-tkrplot
 
 sudo apt-get install -y \
@@ -99,10 +121,7 @@ curl \
 r-cran-littler
 ```
 
-## Install Rstudio
-
-Download and run the installer for your operating system from <https://www.rstudio.com/products/rstudio/download/#download>.
-
 ## See also
 
-[Hands on programming with R](https://rstudio-education.github.io/hopr/starting.html)
+[Hands on programming with
+R](https://RStudio-education.github.io/hopr/starting.html)
