updates to setupProject

--- a/training/SpaDESworkflows.qmd
+++ b/training/SpaDESworkflows.qmd
@@ -1,10 +1,10 @@
 # SpaDES workflows and projects
 
-One of the advantages of `SpaDES` is that workflows arise from the
+One of the advantages of `SpaDES` is that workflows *emerge* from the
 combinations of modules (and of their events) being put together by a
 user. Because SpaDES automatically chains, schedules and executes events
-within and across modules, if the group of modules changes, so do the
-workflow steps being executed.
+within and across modules, if the group of modules changes, the
+workflow steps may also change.
 
 When module developers make sure modules are able to obtain defaults
 values for all their inputs and when many modules have inputs and
