--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -31,7 +31,7 @@ knitr::knit_hooks$set(output = function(x, options) {
 })
 
 # Require::Require(c("ggplot2", "SpaDES.core"), install = FALSE)
-library("ggplot2", lib.loc = libpath)
+library("ggplot2")
 ```
 
 Here, we will talk about **scheduling events** in a SpaDES module using
