fix knitr cache param

--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -8,7 +8,7 @@ execute:
   warning: false
   message: false
   error: false
-  cache: 2
+  cache: true
 ---
 
 # Castor workflow with `setupProject` {#sec-castorEg}
